--- a/index.html
+++ b/index.html
@@ -12,44 +12,51 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<div class="wrapper">
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="rules.html">Zasady</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="prizes.html">Nagrody</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="upload.html">Weź udział</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="gallery.html">Galeria</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">#pocociteciuchy</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+<div class="menu">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-<h1>#po<span class="lighter">co</span>ci<span class="lighter">te</span>ciuchy</h1>
-<h1>#konkurs</h1>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto uppercase">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="rules.html">Zasady</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="prizes.html">Nagrody</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="upload.html">Weź udział</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="gallery.html">Galeria</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">#pocociteciuchy</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
 
-<p class="uppercase">wstaw zdjęcie, dodaj podpis,</p>
-<p class="uppercase">pokaz nam <span class="bolded">po co ci te ciuchy</span></p>
-<p class="uppercase">i zgarnij super nagrody</p>
+<div class="content">
+    <h1><span class="lighter">#</span>po<span class="lighter">co</span>ci<span class="lighter">te</span>ciuchy</h1>
+    <h1><span class="lighter">#</span>konkurs</h1>
+
+    <p class="uppercase">wstaw zdjęcie, dodaj podpis,</p>
+    <p class="uppercase">pokaz nam <span class="bolded">po co ci te ciuchy</span></p>
+    <p class="uppercase">i zgarnij super nagrody</p>
+</div>
 
 
+</div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -59,5 +66,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
+
 </body>
 </html>
